Improve approach to rank stability islands, which leads to REVISION draft H
Changes to be committed:
	modified:   mSys_MAIN_rev.pdf
	modified:   mSys_MAIN_rev.tex
	modified:   mSys_MandM_rev.tex
	modified:   mSys_discussion_rev.tex
	modified:   mSys_results_rev.tex

--- a/mSystems/rev/mSys_MandM_rev.tex
+++ b/mSystems/rev/mSys_MandM_rev.tex
@@ -71,7 +71,7 @@ Reads from the selected studies were first quality filtered using the FastX tool
 
 %%
 \subsubsection*{Metagenomic sequences processing}
-Shotgun metagenomic sequences were analyzed with LMAT (Livermore Metagenomics Analysis Toolkit) software package\cite{LMAT} (version 1.2.4, with Feb'15 release of the LMAT-Grand database). LMAT was run using a Bull shared-memory node belonging to the team?s HPC (high performance computing) cluster. It was equipped with 32 cores (64 threads available using Intel Hyper-Threading Technology) as it has two Haswell-based Xeons (22 nm technology), the E5-2698v3@2.3 GHz, sharing half a tebibyte of DRAM memory. This node is also provided with a PCIe SSD card as NVRAM, the Micron P420m HHHL, with 1.4 TB, and 750000 reading IOPS, 4 KB, achieving 3.3 GB/s. The computing node was supplied with a RAID-0 (striping) scratch disk area. We used the ``Grand'' database\cite{LMAT2}, released in Feb'15, provided by the LMAT team, where ``Grand'' refers to a huge database that contains k-mers from all the viral, prokaryote, fungal and protist genomes present in the NCBI database, plus the Human reference genome (hg19), plus GenBank Human, plus the 1000 Human Genomes Project (HGP) (this represents about 31.75 billion k-mers occupying 457.62 GB)\cite{LMAT2}. Before any calculations were made, the entire database was loaded into the NVRAM. With this configuration, the observed LMAT sustained sequence classification rate was $20\unclassrate$. Finally, it is worth mentioning that a complete set of Python scripts was developed as back-end and front-end of the LMAT pipeline in order to manage the added complexity of time series analysis. 
+Shotgun metagenomic sequences were analyzed with LMAT (Livermore Metagenomics Analysis Toolkit) software package\cite{LMAT} (version 1.2.4, with Feb'15 release of the LMAT-Grand database). LMAT was run using a Bull shared-memory node belonging to the team?s HPC (high performance computing) cluster. It was equipped with 32 cores (64 threads available using Intel Hyper-Threading Technology) as it has two Haswell-based Xeons (22 nm technology), the E5-2698v3@2.3 GHz, sharing half a tebibyte of DRAM memory. This node is also provided with a PCIe SSD card as NVRAM, the Micron P420m HHHL, with 1.4 TB, and 750000 reading IOPS, 4 KB, achieving 3.3 GB/s. The computing node was supplied with a RAID-0 (striping) scratch disk area. We used the ``Grand'' database\cite{LMAT2}, released in Feb'15, provided by the LMAT team, where ``Grand'' refers to a huge database that contains k-mers from all the viral, prokaryote, fungal and protist genomes present in the NCBI database, plus the Human reference genome (hg19), plus GenBank Human, plus the 1000 Human Genomes Project (HGP) (this represents about 31.75 billion k-mers occupying 457.62 GB)\cite{LMAT2}. Before any calculations were made, the entire database was loaded into the NVRAM. With this configuration, the observed LMAT sustained sequence classification rate was $20\unclassrate$. Finally, it is worth mentioning that a complete set of Python scripts  was developed as back-end and front-end of the LMAT pipeline in order to manage the added complexity of time series analysis (\href{https://github.com/DLSteam/MAUS_scripts}{[https://github.com/DLSteam/MAUS\_scripts]}). 
 
 %%
 \subsubsection*{Taxa level robustness}
