--- a/mSystems/rev/mSys_discussion_rev.tex
+++ b/mSystems/rev/mSys_discussion_rev.tex
@@ -14,7 +14,9 @@ By solving Langevin's differential equation, we can obtain a phase diagram where
 	\label{supfig:HLS_xWSummary}
 \end{supfig}
  
-Specifically, the analysis of the rank stability of different periods of time belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}, suggests that the presence of \emph{rank stability islands} among medium-ranked taxa is a interesting feature. Interestingly, this stability was compromised when the period was not an ordinary one, suggesting that those taxa was even sensitive to changes in the lifestyle. It could be brought into question the rule of these taxa as key players in the phase transition of the microbiota, or whether they are more susceptible to perturbations than the most abundant. The types of interactions that could sustain this particular behavior are not clear, as these non-abundant taxa are not usually included in dynamic studies in order to obtain a community matrix. Further experiments and data analysis are needed to clarify whether this was a unique event, or whether it is a widespread feature of stable microbiotas. 
+Specifically, the analysis of the rank stability of different periods of time belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife}, suggests that the presence of \emph{rank stability islands} among medium-ranked taxa is a interesting feature. Interestingly, this stability was compromised when the period was not an ordinary one, suggesting that those taxa were sensitive to changes in the lifestyle. Among the genera identified as \emph{rank stability islands}, \emph{Lachnobacterium} and \emph{Clostridium} were catalogued as genera predictive of dysbiosis in the work of Larsen and Dai \cite{rsi_dysbiosis}, which analysed the same dataset \cite{hostlife}. Furthermore, very recently, it has been confirmed a clear relationship between \emph{Actinomyces} and conventional adenoma \cite{rsi_actino}, one of the two main precursors of the colorectal cancer. Finally,\emph{Eggerthella} is an opportunistic pathogen that is often associated with serious gastrointestinal pathology \cite{rsi_egg}.
+
+It could be brought into question the role of these taxa as key players in the phase transition of the microbiota, or whether they are more susceptible to perturbations than the most abundant. The types of interactions that could sustain this particular behavior are not clear, as these non-abundant taxa are not usually included in dynamic studies in order to obtain a community matrix. Further experiments and data analysis are needed to clarify whether \emph{rank stability island} is a widespread feature of microbiotas and whether it also appears at lower taxonomic levels.
 
 However, we have to be aware that the hypothesis above is too simplistic to be directly related to reality. It has been demonstrated that the situation is more complex than the outlook provided which separate healthy people from non-healthy people just by compositional terms, as Moya and Ferrer underlined in their recent review \cite{Moya_trends}. There are several different feasible scenarios in which we can consider microbiota as being stablem irrespective of their compositional evolution over time. For example, depending on its ability to recover its initial composition (resilience), or whether it can recover its original function despite its composition (functional redundancy). What we have shown in this work could be explained as the transition of stable microbiota into a state of dysbiosis.  
 
