--- a/mSystems/rev/mSys_results_rev.tex
+++ b/mSystems/rev/mSys_results_rev.tex
@@ -59,9 +59,9 @@ The rank dynamics and stability plots in Figure \ref{fig:corrank_HLS_abroad} and
 
 For the trip abroad in Figure \ref{fig:corrank_HLS_abroad}, beyond the differences in dominance for the particular taxa, we still observed that the most dominant were the most rank stable. Moreover, the medium-ranked taxa were quite rank unstable, mostly due to transient (often one or two consecutive samples) yet dramatic drops in their relative abundance, which usually occurred more than twice during their time series.
 
-Nevertheless, in the particular case of the next period, the one subsequent to the trip, in Figure \ref{fig:corrank_HLS_returned}, some taxa showed higher stability than other more dominant taxa, forming a kind of \emph{rank stability islands} for medium--ranked taxa, since they show a moderately stable index (RSI roughly over 70\%). In particular, this is the case for the genera \emph{Actinomyces}, \emph{Leuconostoc}, \emph{Lachnobacterium}, \emph{Eggerthella}, \emph{Clostridium} and	\emph{Collinsella}. For those genera, both the overall rank and the RSI were clearly lower during the trip (RSI under 70\%). \emph{Actinomyces} and \emph{Lachnobacterium} are even not shown in Figure \ref{fig:corrank_HLS_abroad} because they sank to positions 56 and 77, respectively. On the other hand, \emph{Leuconostoc} was the less sensitive to the change of lifestyle.  
+Nevertheless, in the particular case of the next period, the one subsequent to the trip, in Figure \ref{fig:corrank_HLS_returned}, some taxa showed higher stability than other more dominant taxa, forming a kind of \emph{rank stability islands} for medium--ranked taxa, since they show a moderately stable index (RSI roughly over 70\%). In particular, this is the case for the genera \emph{Actinomyces}, \emph{Leuconostoc}, \emph{Lachnobacterium}, \emph{Eggerthella}, \emph{Clostridium} and	\emph{Collinsella}. For those genera, both the overall rank and the RSI were clearly lower during the trip (RSI under 70\%). \emph{Actinomyces} and \emph{Lachnobacterium} are even not shown in Figure \ref{fig:corrank_HLS_abroad} because they sank to positions 56 and 77, respectively. On the contrary, \emph{Leuconostoc} was the least sensitive to the change of lifestyle. In addition, it is worth mentioning that \emph{Lachnobacterium} showed anti-correlation over time against the vast majority of the taxa classified in this study. 
 
-We also found those \emph{rank stability islands} for medium-ranked taxa in the other periods belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife} (see Supplementary Figure \ref{supfig:corrank_HLS_before} and Supplementary Figure \ref{supfig:corrank_HLS_after} for the corresponding rank plots).
+We also found those \emph{rank stability islands} for medium-ranked taxa in the other periods belonging to the individual \emph{A} in the host lifestyle study \cite{hostlife} (see Supplementary Figure \ref{supfig:corrank_HLS_before} and Supplementary Figure \ref{supfig:corrank_HLS_after} for the corresponding rank plots). See Supplementary Table S8 for details about the rank and RSI for the above-mentioned taxa over the different periods considered.
 
 \begin{supfig}
 	\centering
