--- a/mSystems/rev/mSys_MAIN_rev.tex
+++ b/mSystems/rev/mSys_MAIN_rev.tex
@@ -137,9 +137,9 @@
 
 \author[1,2,$*$]{Jose Manuel Martí}
 \author[1,2,3,$*$]{Daniel Martínez-Martínez}
-\author[2]{Manuel Peña}
-\author[1,2]{César Gracia}
 \author[1]{Teresa Rubio}
+\author[1,2]{César Gracia}
+\author[2]{Manuel Peña}
 \author[1,3,4,5]{Amparo Latorre}
 \author[1,3,4,5,\#]{Andrés Moya}
 \author[1,2,\#]{Carlos P. Garay}
@@ -275,10 +275,9 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \bibitem {bucci}  {\bf Bucci V, Tzen B, Li N, Simmons M, Tanoue T, Bogart E, Deng L, Yeliseyev V, Delaney ML, Liu Q, Olle B, Stein RR, Honda K, Bry L, Gerber GK.} 2016. MDSINE: Microbial Dynamical Systems INference Engine for microbiome time-series analyses. Genome Biol {\bf 17}:121.
 \bibitem {koenig} {\bf Koenig JE, Spor A, Scalfone N, Fricker AD, Stombaugh J, Knight R, Angenent LT, Ley RE.} 2011. Succession of microbial consortia in the developing infant gut microbiome. Proc Natl Acad Sci {\bf 108}:4578–4585.
 \bibitem {FD} {\bf Weber, J.} 1956. Fluctuation Dissipation Theorem. Phys. Rev. {\bf 101}:1620-6
-%\bibitem {sislands1} {\bf Ng SC, Lam EFC, Lam TTY, Chan Y, Law W, Tse PCH, Kamm M a, Sung JJY, Chan FKL, Wu JCY.} 2013. Effect of probiotic bacteria on the intestinal microbiota in irritable bowel syndrome. J Gastroenterol Hepatol {\bf 28}:1624–31.
-%\bibitem {sislands2} {\bf Carroll IM, Ringel-Kulka T, Siddle JP, Ringel Y.} 2012. Alterations in composition and diversity of the intestinal microbiota in patients with diarrhea-predominant irritable bowel syndrome. Neurogastroenterol Motil {\bf 24}:521-30
-%\bibitem {sislands3} {\bf Xu D, Gao J, Gillilland M, Wu X, Song I, Kao JY, Owyang C.} 2014. Rifaximin alters intestinal bacteria and prevents stress-induced gut inflammation and visceral hyperalgesia in rats. Gastroenterology {\bf 146}:484–496.e4.
-%\bibitem {sislands4} {\bf Rooks MG, Veiga P, Wardwell-scott LH, Tickle T, Segata N, Michaud M, Gallini CA, Beal C, van Hylckama-Vlieg JET, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS, Hylckama-vlieg JET Van, Ballal SA, Morgan XC, Glickman JN, Gevers D, Huttenhower C, Garrett WS.} 2014. Gut microbiome composition and function in experimental colitis during active disease and treatment-induced remission. ISME J {\bf 8}:1403–17.
+\bibitem {rsi_dysbiosis} {\bf Larsen PE, Dai Y.} 2015. Metabolome of human gut microbiome is predictive of host dysbiosis. Gigascience {\bf 4}:42.
+\bibitem {rsi_actino} {\bf Peters BA, Dominianni C, Shapiro JA, Church TR, Wu J, Miller G, Yuen E, Freiman H, Lustbader I, Salik J, Friedlander C, Hayes RB, Ahn J.} 2016. The gut microbiota in conventional and serrated precursors of colorectal cancer. Microbiome {\bf 4}:69.
+\bibitem {rsi_egg} {\bf Gardiner BJ, Tai AY, Kotsanas D, Francis MJ, Roberts SA, Ballard SA, Junckerstorff RK, Kormana TM.} 2015. Clinical and microbiological characteristics of eggerthella lenta bacteremia. J Clin Microbiol {\bf 53}:626–635.
 \bibitem {tikhonov} {\bf  Tikhonov M.} 2016. Community-level cohesion without cooperation. Elife {\bf 5}. 
 
 %% M&M
@@ -295,6 +294,7 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 
 %% mSystems staff asked to send the captions of the supplementary tables at the end
 %%  of the main text PDF.
+%TC:ignore
 \begin{table}
   \caption{Taylor's parameters. Individuals with either animal-based (A) or plant-based (P) diets\cite{diet}. Previous to the diet, the population sampled is described by $\bar{V} = 0.09 \pm 0.05, \bar{\beta} = 0.77 \pm 0.04$.}
 
@@ -309,6 +309,9 @@ Reduced diversity and altered composition of the gut microbiome in individuals w
 \caption{Taylor's parameters for individuals with different degrees of excess weight and obesity\cite{LEA}. The healthy people in this study, who were not obese, are characterized by $\bar{V} = 0.19 \pm 0.06, \bar{\beta} = 0.806 \pm 0.034$.} 
 
 \caption{Taylor's parameters for special intervals concerning gut microbiota in the host lifestyle study\cite{hostlife}. The healthy and quotidian periods are characterized by $\bar{V} = 0.25 \pm 0.09, \bar{\beta} = 0.777 \pm 0.025$.} 
+
+\caption{Rank and Rank Stability Index (RSI, as discussed in Material and Methods) over different periods for the taxa listed as \emph{rank stability islands} regarding the gut microbiome of the individual \emph{A} in the host lifestyle study \cite{hostlife}.}
 \end{table}
+%TC:endignore
 
 \end{document}
