Corrections and pre-submission, which leads to REVISION draft I
Changes to be committed:
	modified:   figs/supfig_taxlev1.eps
	modified:   figs/supfig_taxlev2.eps
	modified:   mSys_MAIN_rev.pdf
	modified:   mSys_MAIN_rev.tex
	modified:   mSys_MAIN_rev_marked.docx
	modified:   mSys_MandM_rev.tex
	modified:   mSys_discussion_rev.tex
	modified:   mSys_suppl_rev.pdf
	modified:   mSys_suppl_rev.tex
	new file:   tab/mSys_suppl_tab1.pdf
	new file:   tab/mSys_suppl_tab2.pdf
	new file:   tab/mSys_suppl_tab3.pdf
	new file:   tab/mSys_suppl_tab4.pdf
	new file:   tab/mSys_suppl_tab5.pdf
	new file:   tab/mSys_suppl_tab6.pdf
	new file:   tab/mSys_suppl_tab7.pdf
	new file:   tab/mSys_suppl_tab8.pdf

--- a/mSystems/rev/mSys_MAIN_rev.tex
+++ b/mSystems/rev/mSys_MAIN_rev.tex
@@ -4,7 +4,7 @@
 \documentclass[12pt,oneside,letterpaper]{article}
 
 % release codenumber (update it here!)
-\newcommand\releasecode{REVISION draft G}
+\newcommand\releasecode{REVISION draft I}
 
 %%% PACKAGES
 \usepackage{lmodern} % Activa fuentes y macros de Latin Modern
@@ -106,7 +106,7 @@
 \DeclareFloatingEnvironment[
 	fileext=lsf,
 	listname={List of Supplementary Figures},
-	name=Supplementary Figure,
+	name=Supplementary Figure S\!\!,
 	placement=p
 ]{supfig}
 \DeclareDelayedFloat{supfig}{Supplementary Figures}
@@ -114,7 +114,6 @@
 %%% DOCUMENT %%%
 
 \begin{document}
-
 
 \title{
 	\vspace*{0mm} % May help to include the corresponding author footnote in the title page
