--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -48,6 +48,8 @@
 % Captions will be left justified
 \usepackage[labelfont=bf,labelsep=period,font=small]{caption}
 \captionsetup[table]{name=Supplementary Table S\!\!}
+%\DeclareCaptionFormat{empty}{}  %%%%% COMMENT THIS LINE AND THE NEXT FOR REACTIVATING CAPTIONS %%%%%
+%\captionsetup{format=empty,aboveskip=0pt,belowskip=0pt} %%%%%
 
 % review layout with double-spacing
 \usepackage{setspace} 
@@ -95,7 +97,7 @@
 \begin{document}
 
 % Disable page numbering
-%\pagenumbering{gobble}
+\pagenumbering{gobble}
  
 \title{
 	\vspace*{0mm} % May help to include the corresponding author footnote in the title page
@@ -347,8 +349,13 @@
 	\multicolumn{2}{c}{\bf\emph{Clostridium}}&&\multicolumn{2}{c}{\bf\emph{Collinsella}}\\
 \cline{5-6}\cline{8-9}\cline{11-12}\cline{14-15}\cline{17-18}\cline{20-21}
 \rule[-3mm]{0mm}{9mm}&name&days&&					rank&RSI&&	rank&RSI&&	rank&RSI&&	rank&RSI&&	rank&RSI&&	rank&RSI\\
-\cline{2-3}\cline{5-6}\cline{8-9}\cline{11-12}\cline{14-15}\cline{17-18}\cline{20-21}\rule[-2mm]{0mm}{7mm}&\emph{before}&0 to 70&&		46&72.5&&	44&76.3&&	45&70.2&&	35&73.3&&	28&77.2&&	25&84.2\\\rule[-2mm]{0mm}{7mm}&\emph{abroad}&72 to 122&&		56&67.1&&	46&66.2&&	77&53.3&&	48&53.4&&	36&49.9&&	41&63.5\\\rule[-2mm]{0mm}{7mm}&\emph{returned}&123 to 256&&	44&79.3&&	41&69.5&&	31&74.2&&	33&77.5&&	34&71.6&&	27&81.0\\\rule[-2mm]{0mm}{7mm}&\emph{after}&257 to 364&&		43&79.0&&	39&72.2&&	33&68.4&&	30&78.5&&	34&76.7&&	26&80.4\\
-\cline{2-3}\cline{5-6}\cline{8-9}\cline{11-12}\cline{14-15}\cline{17-18}\cline{20-21}\rule[-3mm]{0mm}{8mm}&\multicolumn{2}{c}{Overall}&&	47&76.4&&	43&71.0&&	36&69.2&&	35&74.1&&	34&70.7&&	28&79.5\\
+\cline{2-3}\cline{5-6}\cline{8-9}\cline{11-12}\cline{14-15}\cline{17-18}\cline{20-21}
+\rule[-2mm]{0mm}{7mm}&\emph{before}&0 to 70&&		46&72.5&&	44&76.3&&	45&70.2&&	35&73.3&&	28&77.2&&	25&84.2\\
+\rule[-2mm]{0mm}{7mm}&\emph{abroad}&72 to 122&&		56&67.1&&	46&66.2&&	77&53.3&&	48&53.4&&	36&49.9&&	41&63.5\\
+\rule[-2mm]{0mm}{7mm}&\emph{returned}&123 to 256&&	44&79.3&&	41&69.5&&	31&74.2&&	33&77.5&&	34&71.6&&	27&81.0\\
+\rule[-2mm]{0mm}{7mm}&\emph{after}&257 to 364&&		43&79.0&&	39&72.2&&	33&68.4&&	30&78.5&&	34&76.7&&	26&80.4\\
+\cline{2-3}\cline{5-6}\cline{8-9}\cline{11-12}\cline{14-15}\cline{17-18}\cline{20-21}
+\rule[-3mm]{0mm}{8mm}&\multicolumn{2}{c}{Overall}&&	47&76.4&&	43&71.0&&	36&69.2&&	35&74.1&&	34&70.7&&	28&79.5\\
 \cline{2-3}\cline{5-21}
     \end{tabular}
   \end{center}
@@ -367,4 +374,4 @@
 \end{thebibliography}
 \end{document}
 
-
+Rank and RSI for the taxa listed as rank stability island in the main document.
