--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -29,9 +29,9 @@
 \geometry{textheight=22.5cm} % 22cm for single-space, 22.5cm for double-space
 
 % watermarks (time consuming!)
-\newwatermark[allpages,color=Mulberry!4,angle=45,scale=7,xpos=-40,ypos=0]{REVISION}
-\newwatermark[allpages,color=Mulberry!12,angle=0,scale=1,xpos=0,ypos=137]{
-\emph{mSystems} \LaTeX\ manuscript \releasecode}
+%\newwatermark[allpages,color=Mulberry!4,angle=45,scale=7,xpos=-40,ypos=0]{REVISION}
+%\newwatermark[allpages,color=Mulberry!12,angle=0,scale=1,xpos=0,ypos=137]{
+%\emph{mSystems} \LaTeX\ manuscript \releasecode}
 
 % helps to keep figures from being orphaned on a page by themselves
 \renewcommand{\topfraction}{0.85}
@@ -42,7 +42,7 @@
 % line numbering
 \usepackage[running,mathlines]{lineno}
 \renewcommand\thelinenumber{\color{red}\arabic{linenumber}}
-\linenumbers
+%\linenumbers
 
 % bold the 'Figure #' in the caption and separate it with a period
 % Captions will be left justified
@@ -106,13 +106,13 @@
 		\texttt{\large Title:} \\
 	\end{flushleft}
 	\vspace*{2mm}
-	Supplemental material of "Health and disease imprinted in the time variability of the human microbiome"\\
+	Supplementary tables of "Health and disease imprinted in the time variability of the human microbiome"\\
 	\vspace*{6mm}
 	\begin{flushleft}
 		\texttt{\large Running title:} \\
 	\end{flushleft}
 	\vspace*{0mm}
-	Supplemental material of "Microbiota, are you sick?"
+	Supplementary tables of "Microbiota, are you sick?"
 	\vspace*{4mm}
 	}
 
