--- a/mSystems/rev/mSys_suppl_rev.tex
+++ b/mSystems/rev/mSys_suppl_rev.tex
@@ -141,7 +141,7 @@
 
 \clearpage
 \begin{table}
-  \caption{Taylor's parameters. Individuals with either animal-based (A) or plant-based (P) diets\cite{diet}. Previous to the diet, the population sampled is described by $\bar{V} = 0.09 \pm 0.05, \bar{\beta} = 0.77 \pm 0.04$.}
+  \caption{Taylor's parameters of individuals with either animal-based (A) or plant-based (P) diets\cite{diet}. Previous to the diet, the population sampled was described by $\bar{V} = 0.09 \pm 0.05, \bar{\beta} = 0.77 \pm 0.04$.}
 
   \begin{center}
     \begin{tabular}{*{7}{c}}
@@ -167,8 +167,8 @@
 		P&$0.121 \pm 0.020$&$0.736 \pm 0.027$&$0.921$&&$0.5 \pm 0.4$&$-0.9 \pm 0.6$\\
 		P&$0.187 \pm 0.034$&$0.771 \pm 0.030$&$0.908$&&$1.8 \pm 0.7$&$-0.1 \pm 0.7$\\
 		P&$0.097 \pm 0.015$&$0.735 \pm 0.025$&$0.922$&&$0.05 \pm 0.28$&$-0.9 \pm 0.6$\\
-	   \hline
-	   \hline
+	   	\hline
+    	\hline
     \end{tabular}
   \end{center}
   \label{tab:diet}
@@ -177,7 +177,8 @@
 \clearpage
 
 \begin{table} 
-\caption{Taylor's parameters for individuals taking antibiotics\cite{antibiotic}. Prior to the antibiotics intake, the population sampled is described by $\bar{V} = 0.12 \pm 0.05, \bar{\beta} = 0.75 \pm 0.04$.}
+\caption{Taylor's parameters for individuals taking antibiotics (Ab) in the antibiotics study \cite{antibiotic}, persons diagnosed with irritable bowel syndrome (IBS) in the IBS study \cite{IBS} and for special intervals concerning gut microbiota (HLS) in the host lifestyle study\cite{hostlife}. Prior to the antibiotics intake, the population sampled in the antibiotics study \cite{antibiotic} was described by $\bar{V} = 0.12 \pm 0.05, \bar{\beta} = 0.75 \pm 0.04$. Healthy individuals sampled in the IBS study \cite{IBS} were characterized by $\bar{V} = 0.135 \pm 0.010, \bar{\beta} = 0.692 \pm 0.024$. The healthy and quotidian periods in the host lifestyle study \cite{hostlife} are characterized by $\bar{V} = 0.25 \pm 0.09, \bar{\beta} = 0.777 \pm 0.025$.}
+
   \begin{center}
     \begin{tabular}{*{7}{c}}
 	    \hline
@@ -190,26 +191,16 @@
 		Ab&$0.34 \pm 0.06$&$0.812 \pm 0.032$&$0.936$&&$4.1 \pm 1.2$&$1.5 \pm 0.7$\\
 		Ab&$0.26 \pm 0.05$&$0.798 \pm 0.033$&$0.931$&&$2.8 \pm 0.9$&$1.1 \pm 0.8$\\
 	    \hline
-	    \hline
-    \end{tabular}
-  \end{center}
-  \label{tab:antibiotics}
-\end{table}
-
-\clearpage
-
-\begin{table}
-\caption{Taylor's parameters for persons diagnosed with irritable bowel syndrome (IBS)\cite{IBS}. Healthy individuals sampled in this study are characterized by $\bar{V} = 0.135 \pm 0.010, \bar{\beta} = 0.692 \pm 0.024$.}
- 
-  \begin{center}
-    \begin{tabular}{*{7}{c}}
-	    \hline
-		Metadata&V&$\beta$&$\bar{R}^2$&&V$_{st}$&$\beta_{st}$\\
-		\hline
+	 	\hline
 		IBS (minor)&$0.205 \pm 0.034$&$0.740 \pm 0.029$&$0.917$&&$6.9 \pm 3.3$&$2.0 \pm 1.2$\\
 		IBS (severe)&$0.35 \pm 0.06$&$0.793 \pm 0.025$&$0.934$&&$21 \pm 6$&$4.2 \pm 1.0$\\
-	     \hline
-	     \hline
+        \hline
+    	\hline
+		HLS (abroad)&$0.51 \pm 0.06$&$0.820 \pm 0.012$&$0.928$&&$2.8 \pm 0.6$&$1.7 \pm 0.5$\\
+		HLS (infection)&$0.49 \pm 0.08$&$0.828 \pm 0.018$&$0.923$&&$2.6 \pm 0.9$&$2.0 \pm 0.7$\\
+		HLS (after infection)&$0.36 \pm 0.05$&$0.776 \pm 0.015$&$0.922$&&$1.1 \pm 0.6$&$-0.0 \pm 0.6$\\
+	    \hline
+    	\hline  
     \end{tabular}
   \end{center}
   \label{tab:IBS}
@@ -218,7 +209,7 @@
 \clearpage
 
 \begin{table} 
-\caption{Taylor's parameters for the healthy subject of the discordant twins\cite{kwashiorkor}. This table continues in Supplementary Table \ref{tab:DK}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}
+\caption{Taylor's parameters for the healthy subject (DH) and kwashiorkor part (DK) of the discordant twins\cite{kwashiorkor}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}
   \begin{center}
     \begin{tabular}{*{7}{c}}
 	    \hline
@@ -238,20 +229,6 @@
 		DH&$0.31 \pm 0.05$&$0.853 \pm 0.015$&$0.930$&&$0.6 \pm 0.5$&$-0.4 \pm 0.5$\\
 		DH&$0.203 \pm 0.033$&$0.815 \pm 0.015$&$0.907$&&$-0.44 \pm 0.32$&$-1.7 \pm 0.5$\\
 		\hline
-    \end{tabular}
-  \end{center}
-  \label{tab:DH}
-\end{table}
-
-\clearpage
-
-\begin{table}
-\caption{Taylor's parameters for the kwashiorkor part of the discordant twins\cite{kwashiorkor}. This is a continuation of Supplementary Table \ref{tab:DH}. The population of healthy twins is characterized by $\bar{V} = 0.25 \pm 0.10, \bar{\beta} = 0.863 \pm 0.028$.}
-   \begin{center}
-    \begin{tabular}{*{7}{c}}
-	    \hline
-		Metadata&V&$\beta$&$\bar{R}^2$&&V$_{st}$&$\beta_{st}$\\
-		\hline
 		DK&$0.40 \pm 0.07$&$0.859 \pm 0.017$&$0.926$&&$1.5 \pm 0.7$&$-0.1 \pm 0.6$\\
 		DK&$0.44 \pm 0.08$&$0.868 \pm 0.016$&$0.919$&&$1.8 \pm 0.8$&$0.2 \pm 0.6$\\
 		DK&$0.196 \pm 0.031$&$0.819 \pm 0.014$&$0.916$&&$-0.50 \pm 0.30$&$-1.5 \pm 0.5$\\
@@ -266,10 +243,10 @@
 		DK&$0.31 \pm 0.06$&$0.851 \pm 0.016$&$0.924$&&$0.6 \pm 0.6$&$-0.4 \pm 0.6$\\
 		DK&$0.149 \pm 0.022$&$0.799 \pm 0.013$&$0.905$&&$-0.96 \pm 0.22$&$-2.2 \pm 0.5$\\
 	    \hline
-	    \hline
+    	\hline
     \end{tabular}
   \end{center}
-    \label{tab:DK}
+    \label{tab:Kwash}
 \end{table}
 
 \clearpage
@@ -304,30 +281,10 @@
 		OBIIId&$0.38 \pm 0.06$&$0.846 \pm 0.023$&$0.951$&&$3.2 \pm 1.0$&$1.2 \pm 0.7$\\
 		OBIIId&$0.36 \pm 0.06$&$0.842 \pm 0.022$&$0.954$&&$2.9 \pm 0.9$&$1.1 \pm 0.6$\\
 	    \hline
-	    \hline
+    	\hline
     \end{tabular}
   \end{center}
   \label{tab:LEA}
-\end{table}
-
-\clearpage
-
-\begin{table}
-\caption{Taylor's parameters for special intervals concerning gut microbiota in the host lifestyle study\cite{hostlife}. The healthy and quotidian periods are characterized by $\bar{V} = 0.25 \pm 0.09, \bar{\beta} = 0.777 \pm 0.025$.}
- 
-  \begin{center}
-    \begin{tabular}{*{7}{c}}
-	    \hline
-		Metadata&V&$\beta$&$\bar{R}^2$&&V$_{st}$&$\beta_{st}$\\
-		\hline
-		HLS (abroad)&$0.51 \pm 0.06$&$0.820 \pm 0.012$&$0.928$&&$2.8 \pm 0.6$&$1.7 \pm 0.5$\\
-		HLS (infection)&$0.49 \pm 0.08$&$0.828 \pm 0.018$&$0.923$&&$2.6 \pm 0.9$&$2.0 \pm 0.7$\\
-		HLS (after infection)&$0.36 \pm 0.05$&$0.776 \pm 0.015$&$0.922$&&$1.1 \pm 0.6$&$-0.0 \pm 0.6$\\
-	     \hline
-	     \hline
-    \end{tabular}
-  \end{center}
-  \label{tab:HLS}
 \end{table}
 
 \clearpage
